--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,11 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            'Kshitij Shah'
+title:            'Typo Project'
 tagline:          'Data Scientist'
 description:      'MSCS student at Rutgers, Data Scientist'
 url:              https://xitizzz.github.io
 baseurl:          /typo
-
-email: kshitij.shah.cs@gmail.com
-github_username:  xitizzz
-linkedin_public_url: kshitij-shah-cs
 
 author:
   name:           'Kshitij '
