--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,20 @@
 # Dependencies
-markdown:         redcarpet
-highlighter:      pygments
+# markdown:         redcarpet
+highlighter:      rouge
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
 
 # Setup
 title:            'Typo Project'
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://typo.kshitijshah.net
+tagline:          'Data Scientist'
+description:      'MSCS student at Rutgers, Data Scientist'
+url:              https://xitizzz.github.io/typo
 baseurl:          /
 
 author:
-  name:           'Kshitij Shah'
-  url:            https://kshitijshah.net/mdo
+  name:           'Kshitij '
+  url:            https://twitter.com/xitizzz
 
 paginate:         5
 
@@ -23,4 +22,6 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/xitizzz/typo
+  repo:           https://xitizzz.github.io/typo
+
+
