--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 title:            'Context-Aware Typographical Error Correction'
-tagline:          'Data Scientist'
+tagline:          'Typo Project'
 description:      'via Training Data Augmentation'
 url:              https://typo.kshitjshah.net
 baseurl:          /
